--- a/index.html
+++ b/index.html
@@ -4,18 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin Fashion 2k24</title>
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!-- tailwind css  -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- custom css  -->
+    <style>
+        .bebas-neue{
+            font-family: "Bebas Neue", sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div>
-            <div>
-                <h1 class="text-7xl uppercase font-bold text-gray-600"><span class="text-orange-500">Be the Penguins</span> of Winter</h1>
+    <header class="bg-[#FFFBF0] py-24">
+        <nav></nav>
+        <div class="flex flex-col md:flex-row justify-between items-center w-4/5 mx-auto">
+            <div class="space-y-3">
+                <h1 class="text-7xl uppercase font-bold text-[#363958] bebas-neue">
+                    <span class="text-[#FABE4C]">Be the Penguins</span>
+                    <br>of Winter
+                </h1>
+                <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <button class="uppercase font-bold px-8 py-4 text-white rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="currentColor" class="w-6 h-6 inline">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                  </svg> 
+                buy now
+                </button>
             </div>
-            <div></div>
+            <div>
+                <img src="images/model.png" alt="model">
+            </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="w-4/5 mx-auto py-20">
+            <h3 class="text-5xl uppercase font-bold text-[#363958]">women jacket</h3>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
