--- a/index.html
+++ b/index.html
@@ -39,8 +39,113 @@
         </div>
     </header>
     <main>
+        <!-- women section  -->
         <section class="w-4/5 mx-auto py-20">
             <h3 class="text-5xl uppercase font-bold text-[#363958]">women jacket</h3>
+            <div class="my-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+                <!-- jacket 1  -->
+                <div class="space-y-3 p-5 shadow-2xl rounded-2xl">
+                    <div class="bg-[#F1F1F1] rounded-2xl p-5">
+                        <img src="images/jacket-1.png" alt="jacket">
+                    </div>
+                    <h4 class="text-2xl text-[#363958] font-bold">Yellow Coat Jacket</h4>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-4xl text-[#FABE4C] font-black">$234</h2>
+                        <button class="uppercase font-bold px-8 py-4 text-white rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg> 
+                        buy now
+                        </button>
+                    </div>
+                </div>
+                <!-- jacket 2  -->
+                <div class="space-y-3 p-5 shadow-2xl rounded-2xl">
+                    <div class="bg-[#F1F1F1] rounded-2xl p-5">
+                        <img src="images/jacket-2.png" alt="jacket">
+                    </div>
+                    <h4 class="text-2xl text-[#363958] font-bold">Ladies Jacket</h4>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-4xl text-[#FABE4C] font-black">$234</h2>
+                        <button class="uppercase font-bold px-8 py-4 text-white rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg> 
+                        buy now
+                        </button>
+                    </div>
+                </div>
+                <!-- jacket 3  -->
+                <div class="space-y-3 p-5 shadow-2xl rounded-2xl">
+                    <div class="bg-[#F1F1F1] rounded-2xl p-5">
+                        <img src="images/jacket-3.png" alt="jacket">
+                    </div>
+                    <h4 class="text-2xl text-[#363958] font-bold">Woman Leather Jacket</h4>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-4xl text-[#FABE4C] font-black">$234</h2>
+                        <button class="uppercase font-bold px-8 py-4 text-white rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg> 
+                        buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- men section  -->
+        <section class="w-4/5 mx-auto py-20">
+            <h3 class="text-5xl uppercase font-bold text-[#363958]">men jacket</h3>
+            <div class="my-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+                <!-- jacket 4  -->
+                <div class="space-y-3 p-5 shadow-2xl rounded-2xl">
+                    <div class="bg-[#F1F1F1] rounded-2xl p-5">
+                        <img src="images/jacket-4.png" alt="jacket">
+                    </div>
+                    <h4 class="text-2xl text-[#363958] font-bold">Snowboard Jacket Mens</h4>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-4xl text-[#FABE4C] font-black">$234</h2>
+                        <button class="uppercase font-bold px-8 py-4 text-white rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg> 
+                        buy now
+                        </button>
+                    </div>
+                </div>
+                <!-- jacket 5  -->
+                <div class="space-y-3 p-5 shadow-2xl rounded-2xl">
+                    <div class="bg-[#F1F1F1] rounded-2xl p-5">
+                        <img src="images/jacket-5.png" alt="jacket">
+                    </div>
+                    <h4 class="text-2xl text-[#363958] font-bold">Man Leather Jackets</h4>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-4xl text-[#FABE4C] font-black">$234</h2>
+                        <button class="uppercase font-bold px-8 py-4 text-white rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg> 
+                        buy now
+                        </button>
+                    </div>
+                </div>
+                <!-- jacket 6  -->
+                <div class="space-y-3 p-5 shadow-2xl rounded-2xl">
+                    <div class="bg-[#F1F1F1] rounded-2xl p-5">
+                        <img src="images/jacket-6.png" alt="jacket">
+                    </div>
+                    <h4 class="text-2xl text-[#363958] font-bold">Man Casual Jackets</h4>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-4xl text-[#FABE4C] font-black">$234</h2>
+                        <button class="uppercase font-bold px-8 py-4 text-white rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.0" stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg> 
+                        buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
