footer area add

--- a/index.html
+++ b/index.html
@@ -148,6 +148,41 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="pb-24">
+        <div class="w-4/5 mx-auto flex flex-col md:flex-col lg:flex-row justify-between items-center gap-10">
+            <div class="space-y-5">
+                <div class="flex justify-between items-center gap-5 shadow-2xl p-5 rounded-2xl">
+                    <div>
+                        <img src="icons/house.png" alt="house icon">
+                    </div>
+                    <div class="space-y-3">
+                        <h4 class="text-[#363958] font-bold text-2xl">Find the Perfect Fit</h4>
+                        <p class="text-[#3E3E3E]">Everybody is different, which is why we offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="flex justify-between items-center gap-5 shadow-2xl p-5 rounded-2xl">
+                    <div>
+                        <img src="icons/box.png" alt="box icon">
+                    </div>
+                    <div class="space-y-3">
+                        <h4 class="text-[#363958] font-bold text-2xl">Free Exchanges</h4>
+                        <p class="text-[#3E3E3E]">One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="flex justify-between items-center gap-5 shadow-2xl p-5 rounded-2xl">
+                    <div>
+                        <img src="icons/question.png" alt="question icon">
+                    </div>
+                    <div class="space-y-3">
+                        <h4 class="text-[#363958] font-bold text-2xl">Contact Our Seller</h4>
+                        <p class="text-[#3E3E3E]">They are here to help you. That's quite literally what we pay them for.</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="images/shopping.png" alt="shopping">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
